Fixed page stuck at the bottom on reload

--- a/src/index.css
+++ b/src/index.css
@@ -75,4 +75,5 @@ html {
 .links {
   text-decoration: none;
   color: grey;
+  cursor: pointer;
 }
